fixed items not aligning

--- a/src/styles/PostCard.css
+++ b/src/styles/PostCard.css
@@ -2,7 +2,7 @@
 	width: 650px;
 	height: 320px;
 	/*border: 1px solid black;*/
-	margin: 20px 0px;
+	margin: 20px 5px;
 	padding: 0px;
 	position: relative;
 	border-radius: 5px;
