--- a/src/styles/PostCardList.css
+++ b/src/styles/PostCardList.css
@@ -1,16 +1,16 @@
 .pcl-container{
-	/*display: flex;
+	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	margin: auto;*/
-	display: grid;
+	margin: auto;
+	/*display: grid;
 	grid-gap: 0px;
-	grid-template-columns: auto;
+	grid-template-columns: auto;*/
 	/*justify-content: center;
 	margin: auto;
 	border: 1px solid black;
 	*/
-	justify-items: center;
+	/*justify-items: center;*/
 }
 
 .no-pets{
@@ -23,15 +23,13 @@
 	margin: auto;
 }
 
-/* viewport 4 : Mobile-landscape (and larger) */
-@media (min-width: 480px) {
+/*@media (min-width: 480px) {
 	.pcl-container {
 	grid-template-columns: auto;
 }
 
 }
 
-/* viewport 7 : Tablet-portrait (and larger) */
 @media (min-width: 768px) {
 	.pcl-container {
 	grid-template-columns: auto;
@@ -39,7 +37,6 @@
 
 }
 
-/* viewport 9 : Table-landscape (and larger) */
 @media (min-width: 992px) {
 	.pcl-container {
 	grid-template-columns: auto;
@@ -47,10 +44,9 @@
  
 }
 
-/* viewport 12 : Laptops (and larger)  */
 @media (min-width: 1200px) {
 	.pcl-container {
 		grid-template-columns: repeat(2, 1fr);
 	}
 
-}
+}*/
